hphp/hack/test/typecheck/fc_enum_13.php.exp
File "fc_enum_13.php", line 5, characters 18-31:
HH\BuiltinEnum is an implementation internal class that cannot be used directly (Naming[2053])
